--- a/Resume.html
+++ b/Resume.html
@@ -13,7 +13,7 @@
   crossorigin="anonymous"></script>
 <script src="semantic/dist/semantic.min.js"></script>
 
-	<link rel="stylesheet" href="Styles/Resume.css">
+	<link rel="stylesheet" href="Resume.css">
 
 	<meta charset="utf-8">
 	<title> About Brittany! </title>
